fix(style): add responsive to spacing, fix responsive to doc

--- a/src/components/Article/ArticleContent.module.scss
+++ b/src/components/Article/ArticleContent.module.scss
@@ -12,10 +12,10 @@
     // &::before {
     //   content: "— ";
     // }
-    
-    @media (max-width: $breakpoint-sm) { 
+
+    @media (max-width: $breakpoint-sm) {
       margin-left: 0;
-  
+
       &::before {
         content: "";
       }
@@ -101,6 +101,15 @@
     code {
       background: #111111;
       border: 1px solid var(--color-gray-vlight);
+    }
+  }
+}
+
+@media (max-width: $breakpoint-sm) {
+  .article {
+    a, li, p {
+      word-break: break-word;
+      overflow-wrap: break-word;
     }
   }
 }
